--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,8 @@ Title: A Tool to Create HTML Tables
 Version: 1.1.1
 Authors@R: c(
     person("Theo", "Boutaris", email = "teoboot2007@hotmail.com", role = c("aut", "cre", "cph")),
-    person("Clemens", "Zauchner", email = "cst.zauchner@gmail.com", role = "aut"))
+    person("Clemens", "Zauchner", email = "cst.zauchner@gmail.com", role = "aut"),
+    person("Dana", "Jomar", email = "dana.jomar@outlook.com", role = "ctb"))
 URL: https://github.com/LyzandeR/tableHTML
 BugReports: https://github.com/LyzandeR/tableHTML/issues
 Depends:
@@ -12,14 +13,15 @@ Depends:
 Imports:
     htmltools,
     magrittr,
-    shiny
+    shiny,
+    webshot
 Description: A tool to create and style HTML tables with CSS. These can
     be exported and used in any application that accepts HTML (e.g. 'shiny',
     'rmarkdown', 'PowerPoint'). It also provides functions to create CSS files
     (which also work with shiny).
 License: MIT + file LICENSE
 LazyData: TRUE
-RoxygenNote: 5.0.1
+RoxygenNote: 6.1.0
 Suggests:
     testthat,
     knitr,
