--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(render_tableHTML)
 export(replace_html)
 export(tableHTML)
 export(tableHTML_output)
+export(tableHTML_to_image)
 export(write_tableHTML)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,colorRampPalette)
